# tortoise-march

./: 404.html  CHANGELOG.md  LICENSE  README.md  compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml
api/: index.html
docs/: api.md  index.md
src/tortoisemarch/: __init__.py  base.py  cli.py  conf.py  constraints.py  differ.py  exceptions.py  extensions.py  extractor.py  historical_models.py  introspect.py  loader.py  makemigrations.py  migrate.py  model_state.py  operations.py  recorder.py  schema_editor.py  schema_filtering.py  utils.py  writer.py
tests/: __init__.py  conftest.py  test_cli.py  test_codegen_compaction.py  test_conf.py  test_constraints.py  test_create_model_integration.py  test_differ.py  test_extensions.py  test_extractor.py  test_loader_includes.py  test_makemigrations.py  test_makemigrations_index_validation.py  test_makemigrations_non_nullable_guard.py  test_migrate_integration.py  test_migrate_unit.py  test_model_ordering.py  test_model_state.py  test_operations.py  test_rename_interactive.py  test_schema_editor  test_schema_editor.py  test_schema_filtering.py  test_writer.py
tests/__snapshots__/: test_makemigrations.ambr
tests/models/: __init__.py
