[project]
name = "tortoise-march"
version = "0.1.0"
description = "A Django-style migration system for Tortoise ORM"
authors = [{ name = "Arnaud Blois", email = "opensource@arnaudblois.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tortoise-orm>=1.1.2,<2.0.0",
    "asyncpg>=0.31.0",
    "black>=26.1.0",
]

[project.urls]
Homepage = "https://github.com/arnaudblois/tortoise-march"
Repository = "https://github.com/arnaudblois/tortoise-march"

[project.scripts]
tortoisemarch = "tortoisemarch.cli:main"

[tool.poetry]
packages = [{ include = "tortoisemarch", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.1.0"
ruff = "^0.15.2"
isort = "^8.0.0"
pre-commit = "^4.2.0"
ipython = "^9.4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.19"
mkdocs-autorefs = "^1.4.3"
mkdocs-include-markdown-plugin = "^7.1.7"
syrupy = "^5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    ".local",
    ".venv",
    "migrations",
]

[tool.black]
exclude = "/(\n    \\.local\n  | \\.venv\n  | migrations\n)/\n"

[tool.ruff]
target-version = "py313"
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D105",
    "D106",
    "D203",
    "D206",
    "D213",
    "ANN",
    "S101",
    "ARG001",
    "TC001",
    "TC002",
]

[tool.pytest.ini_options]
addopts = "-s --pdbcls=IPython.terminal.debugger:TerminalPdb"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
